Add extra error logging so that something is logged.

NOTREACHED is reached several hundred times but I don't know where
that's coming from.

BUG=chromium:856948

Change-Id: Ia58898bfa1428c03113d99816598f89df3a5e9fb
Reviewed-on: https://chromium-review.googlesource.com/1124201
Commit-Queue: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573198}
Former-commit-id: 8f4a641ed755cee371869e6314b94bb8eb9897a6